Fixed label alignment in Joomla popup email form (fixes #665)

--- a/themes/hydrogen/joomla/scss/hydrogen-joomla/_forms.scss
+++ b/themes/hydrogen/joomla/scss/hydrogen-joomla/_forms.scss
@@ -56,5 +56,10 @@ input[type="color"],
     #g-page-surround {
         box-shadow: none;
     }
+    .formelm {
+        label {
+            display: block;
+        }
+    }
 }
 
